--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name=".MainApplication"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MovieApp"
+        android:theme="@style/Theme.MovieApp.NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
